site/server/b22/lang.output
State 22 conflicts: 18 shift/reduce


Grammar

    0 $accept: commands $end

    1 commands: ε
    2         | commands command

    3 command: help_cmd
    4        | session_cmd
    5        | info_cmd
    6        | looking_cmd
    7        | turn_cmd
    8        | combat_cmd
    9        | build_cmd
   10        | deploy_cmd
   11        | move_cmd
   12        | pickdrop_cmd
   13        | rep_cmd

   14 session_cmd: TOK_START_GAME TOK_LEARNING
   15            | TOK_START_GAME TOK_BASIC
   16            | TOK_START_GAME TOK_ADVANCED
   17            | TOK_RESET
   18            | TOK_SAVE TOK_STRING
   19            | TOK_LOAD
   20            | TOK_LOAD TOK_STRING
   21            | TOK_DELETE
   22            | TOK_DELETE TOK_STRING
   23            | TOK_QUIT

   24 info_cmd: TOK_STATUS
   25         | TOK_CRT

   26 looking_cmd: TOK_HEX TOK_STRING
   27            | TOK_ONLINE
   28            | TOK_STATS
   29            | TOK_FLEET
   30            | TOK_SYSTEM TOK_STRING
   31            | TOK_SYSTEM TOK_STRING TOK_STRING
   32            | TOK_SURVEY
   33            | TOK_SURVEY TOK_STRING
   34            | TOK_GALAXY

   35 turn_cmd: TOK_NEXT
   36         | TOK_DONE

   37 combat_cmd: TOK_COMBAT
   38           | TOK_COMBAT TOK_DRAFTS
   39           | TOK_COMBAT_DRAFTS
   40           | TOK_COMBAT TOK_COMMIT
   41           | TOK_COMBAT_COMMIT
   42           | TOK_COMBAT TOK_CANCEL
   43           | TOK_COMBAT_CANCEL
   44           | TOK_COMBAT TOK_ORDER combat_initiator_ship combat_tactic combat_target_ship combat_order_spec
   45           | TOK_COMBAT_ORDER combat_initiator_ship combat_tactic combat_target_ship combat_order_spec
   46           | TOK_COMBAT TOK_APPLY combat_damaged_ship combat_application_spec
   47           | TOK_COMBAT_APPLY combat_damaged_ship combat_application_spec

   48 building_draft_ship: TOK_STRING

   49 combat_initiator_ship: TOK_STRING

   50 combat_damaged_ship: TOK_STRING

   51 combat_tactic: TOK_ATTACK
   52              | TOK_DODGE
   53              | TOK_ESCAPE

   54 combat_target_ship: TOK_STRING

   55 combat_order_spec: TOK_PD_ASSIGN additional_combat_order_spec
   56                  | TOK_B_ASSIGN additional_combat_order_spec
   57                  | TOK_S_ASSIGN additional_combat_order_spec
   58                  | TOK_T_ASSIGN additional_combat_order_spec
   59                  | TOK_M_ASSIGN additional_combat_order_spec

   60 additional_combat_order_spec: ε
   61                             | TOK_PD_ASSIGN additional_combat_order_spec
   62                             | TOK_B_ASSIGN additional_combat_order_spec
   63                             | TOK_S_ASSIGN additional_combat_order_spec
   64                             | TOK_T_ASSIGN additional_combat_order_spec
   65                             | TOK_M_ASSIGN additional_combat_order_spec

   66 combat_application_spec: TOK_PD_ASSIGN additional_combat_application_spec
   67                        | TOK_B_ASSIGN additional_combat_application_spec
   68                        | TOK_S_ASSIGN additional_combat_application_spec
   69                        | TOK_T_ASSIGN additional_combat_application_spec
   70                        | TOK_M_ASSIGN additional_combat_application_spec

   71 additional_combat_application_spec: ε
   72                                   | TOK_PD_ASSIGN additional_combat_application_spec
   73                                   | TOK_B_ASSIGN additional_combat_application_spec
   74                                   | TOK_S_ASSIGN additional_combat_application_spec
   75                                   | TOK_T_ASSIGN additional_combat_application_spec
   76                                   | TOK_M_ASSIGN additional_combat_application_spec

   77 build_cmd: TOK_BUILD
   78          | TOK_BUILD TOK_NEW TOK_STRING TOK_STRING
   79          | TOK_BUILD_NEW TOK_STRING TOK_STRING
   80          | TOK_BUILD TOK_DRAFTS
   81          | TOK_BUILD_DRAFTS
   82          | TOK_BUILD TOK_DRAFTS building_draft_ship
   83          | TOK_BUILD_DRAFTS building_draft_ship
   84          | TOK_BUILD TOK_SET_ATTR build_attr_spec
   85          | TOK_BUILD_SET_ATTR build_attr_spec
   86          | TOK_BUILD TOK_COMMIT
   87          | TOK_BUILD_COMMIT
   88          | TOK_BUILD TOK_CANCEL
   89          | TOK_BUILD_CANCEL

   90 build_attr_spec: TOK_PD_ASSIGN additional_build_attr_spec
   91                | TOK_B_ASSIGN additional_build_attr_spec
   92                | TOK_S_ASSIGN additional_build_attr_spec
   93                | TOK_T_ASSIGN additional_build_attr_spec
   94                | TOK_M_ASSIGN additional_build_attr_spec
   95                | TOK_SR_ASSIGN additional_build_attr_spec

   96 additional_build_attr_spec: ε
   97                           | TOK_PD_ASSIGN additional_build_attr_spec
   98                           | TOK_B_ASSIGN additional_build_attr_spec
   99                           | TOK_S_ASSIGN additional_build_attr_spec
  100                           | TOK_T_ASSIGN additional_build_attr_spec
  101                           | TOK_M_ASSIGN additional_build_attr_spec
  102                           | TOK_SR_ASSIGN additional_build_attr_spec

  103 deployable_ship: TOK_STRING

  104 deploy_cmd: TOK_DEPLOY
  105           | TOK_DEPLOY deployable_ship TOK_STRING

  106 target_systemship: TOK_STRING

  107 chain_move_location: ε
  108                    | TOK_STRING chain_move_location

  109 move_cmd: TOK_MOVE
  110         | TOK_MOVE TOK_STRING TOK_STRING chain_move_location

  111 warpship_pick_destination: TOK_STRING

  112 warpship_drop_source: TOK_STRING

  113 pickdrop_cmd: TOK_PICK TOK_STRING
  114             | TOK_DROP warpship_drop_source
  115             | TOK_PICK target_systemship warpship_pick_destination
  116             | TOK_DROP target_systemship warpship_drop_source

  117 rep_cmd: TOK_REPAIR
  118        | TOK_REPAIR TOK_STRING repair_attr_spec
  119        | TOK_RESUPPLY
  120        | TOK_RESUPPLY TOK_STRING TOK_INT

  121 repair_attr_spec: TOK_PD_ASSIGN
  122                 | TOK_B_ASSIGN
  123                 | TOK_S_ASSIGN
  124                 | TOK_T_ASSIGN

  125 help_cmd: TOK_HELP
  126         | help_composite

  127 help_composite: TOK_HELP TOK_STRING
  128               | help_command

  129 help_command: TOK_HELP TOK_SET_ATTR
  130             | TOK_HELP TOK_APPLY
  131             | TOK_HELP TOK_BEAM
  132             | TOK_HELP TOK_BUILD
  133             | TOK_HELP TOK_CANCEL
  134             | TOK_HELP TOK_COMBAT
  135             | TOK_HELP TOK_COMMIT
  136             | TOK_HELP TOK_DEPLOY
  137             | TOK_HELP TOK_DONE
  138             | TOK_HELP TOK_DRAFTS
  139             | TOK_HELP TOK_DROP
  140             | TOK_HELP TOK_FLEET
  141             | TOK_HELP TOK_GALAXY
  142             | TOK_HELP TOK_HELP
  143             | TOK_HELP TOK_HEX
  144             | TOK_HELP TOK_LIST
  145             | TOK_HELP TOK_MISSILE
  146             | TOK_HELP TOK_MOVE
  147             | TOK_HELP TOK_NEW
  148             | TOK_HELP TOK_NEXT
  149             | TOK_HELP TOK_NEXT_SHORT
  150             | TOK_HELP TOK_ONLINE
  151             | TOK_HELP TOK_ORDER
  152             | TOK_HELP TOK_PICK
  153             | TOK_HELP TOK_POWER_DRIVE
  154             | TOK_HELP TOK_RESET
  155             | TOK_HELP TOK_SCREEN
  156             | TOK_HELP TOK_START_GAME
  157             | TOK_HELP TOK_STATS
  158             | TOK_HELP TOK_STATUS
  159             | TOK_HELP TOK_SYSTEM
  160             | TOK_HELP TOK_TUBE
  161             | TOK_HELP TOK_UNKNOWN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOK_INT <ival> (258) 120
    TOK_STRING <sval> (259) 18 20 22 26 30 31 33 48 49 50 54 78 79 103 105 106 108 110 111 112 113 118 120 127
    TOK_ADVANCED (260) 16
    TOK_APPLY (261) 46 130
    TOK_ATTACK (262) 51
    TOK_BASIC (263) 15
    TOK_BEAM (264) 131
    TOK_BUILD (265) 77 78 80 82 84 86 88 132
    TOK_BUILD_COMMIT (266) 87
    TOK_BUILD_NEW (267) 79
    TOK_BUILD_DRAFTS (268) 81 83
    TOK_BUILD_CANCEL (269) 89
    TOK_BUILD_SET_ATTR (270) 85
    TOK_CANCEL (271) 42 88 133
    TOK_COMBAT (272) 37 38 40 42 44 46 134
    TOK_COMBAT_DRAFTS (273) 39
    TOK_COMBAT_ORDER (274) 45
    TOK_COMBAT_APPLY (275) 47
    TOK_COMBAT_COMMIT (276) 41
    TOK_COMBAT_CANCEL (277) 43
    TOK_COMMIT (278) 40 86 135
    TOK_CRT (279) 25
    TOK_DELETE (280) 21 22
    TOK_DEPLOY (281) 104 105 136
    TOK_DODGE (282) 52
    TOK_DONE (283) 36 137
    TOK_DRAFTS (284) 38 80 82 138
    TOK_DROP (285) 114 116 139
    TOK_ESCAPE (286) 53
    TOK_FLEET (287) 29 140
    TOK_GALAXY (288) 34 141
    TOK_HELP (289) 125 127 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161
    TOK_HEX (290) 26 143
    TOK_LEARNING (291) 14
    TOK_LIST (292) 144
    TOK_LOAD (293) 19 20
    TOK_MISSILE (294) 145
    TOK_MOVE (295) 109 110 146
    TOK_NEW (296) 78 147
    TOK_NEXT (297) 35 148
    TOK_NEXT_SHORT (298) 149
    TOK_ONLINE (299) 27 150
    TOK_ORDER (300) 44 151
    TOK_PICK (301) 113 115 152
    TOK_POWER_DRIVE (302) 153
    TOK_QUIT (303) 23
    TOK_REPAIR (304) 117 118
    TOK_RESET (305) 17 154
    TOK_RESUPPLY (306) 119 120
    TOK_SAVE (307) 18
    TOK_SCREEN (308) 155
    TOK_SET_ATTR (309) 84 129
    TOK_START_GAME (310) 14 15 16 156
    TOK_STATS (311) 28 157
    TOK_STATUS (312) 24 158
    TOK_SYSTEM (313) 30 31 159
    TOK_SURVEY (314) 32 33
    TOK_TUBE (315) 160
    TOK_PD_ASSIGN <ival> (316) 55 61 66 72 90 97 121
    TOK_B_ASSIGN <ival> (317) 56 62 67 73 91 98 122
    TOK_S_ASSIGN <ival> (318) 57 63 68 74 92 99 123
    TOK_T_ASSIGN <ival> (319) 58 64 69 75 93 100 124
    TOK_M_ASSIGN <ival> (320) 59 65 70 76 94 101
    TOK_SR_ASSIGN <ival> (321) 95 102
    TOK_UNKNOWN (322) 161


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    commands (69)
        on left: 1 2
        on right: 0 2
    command (70)
        on left: 3 4 5 6 7 8 9 10 11 12 13
        on right: 2
    session_cmd (71)
        on left: 14 15 16 17 18 19 20 21 22 23
        on right: 4
    info_cmd (72)
        on left: 24 25
        on right: 5
    looking_cmd (73)
        on left: 26 27 28 29 30 31 32 33 34
        on right: 6
    turn_cmd (74)
        on left: 35 36
        on right: 7
    combat_cmd (75)
        on left: 37 38 39 40 41 42 43 44 45 46 47
        on right: 8
    building_draft_ship <sval> (76)
        on left: 48
        on right: 82 83
    combat_initiator_ship (77)
        on left: 49
        on right: 44 45
    combat_damaged_ship (78)
        on left: 50
        on right: 46 47
    combat_tactic (79)
        on left: 51 52 53
        on right: 44 45
    combat_target_ship (80)
        on left: 54
        on right: 44 45
    combat_order_spec (81)
        on left: 55 56 57 58 59
        on right: 44 45
    additional_combat_order_spec (82)
        on left: 60 61 62 63 64 65
        on right: 55 56 57 58 59 61 62 63 64 65
    combat_application_spec (83)
        on left: 66 67 68 69 70
        on right: 46 47
    additional_combat_application_spec (84)
        on left: 71 72 73 74 75 76
        on right: 66 67 68 69 70 72 73 74 75 76
    build_cmd (85)
        on left: 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 9
    build_attr_spec (86)
        on left: 90 91 92 93 94 95
        on right: 84 85
    additional_build_attr_spec (87)
        on left: 96 97 98 99 100 101 102
        on right: 90 91 92 93 94 95 97 98 99 100 101 102
    deployable_ship <sval> (88)
        on left: 103
        on right: 105
    deploy_cmd (89)
        on left: 104 105
        on right: 10
    target_systemship (90)
        on left: 106
        on right: 115 116
    chain_move_location <vec_sval> (91)
        on left: 107 108
        on right: 108 110
    move_cmd (92)
        on left: 109 110
        on right: 11
    warpship_pick_destination (93)
        on left: 111
        on right: 115
    warpship_drop_source (94)
        on left: 112
        on right: 114 116
    pickdrop_cmd (95)
        on left: 113 114 115 116
        on right: 12
    rep_cmd (96)
        on left: 117 118 119 120
        on right: 13
    repair_attr_spec (97)
        on left: 121 122 123 124
        on right: 118
    help_cmd (98)
        on left: 125 126
        on right: 3
    help_composite (99)
        on left: 127 128
        on right: 126
    help_command (100)
        on left: 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161
        on right: 128


State 0

    0 $accept: • commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


State 1

    0 $accept: commands • $end
    2 commands: commands • command

    $end                shift, and go to state 2
    TOK_BUILD           shift, and go to state 3
    TOK_BUILD_COMMIT    shift, and go to state 4
    TOK_BUILD_NEW       shift, and go to state 5
    TOK_BUILD_DRAFTS    shift, and go to state 6
    TOK_BUILD_CANCEL    shift, and go to state 7
    TOK_BUILD_SET_ATTR  shift, and go to state 8
    TOK_COMBAT          shift, and go to state 9
    TOK_COMBAT_DRAFTS   shift, and go to state 10
    TOK_COMBAT_ORDER    shift, and go to state 11
    TOK_COMBAT_APPLY    shift, and go to state 12
    TOK_COMBAT_COMMIT   shift, and go to state 13
    TOK_COMBAT_CANCEL   shift, and go to state 14
    TOK_CRT             shift, and go to state 15
    TOK_DELETE          shift, and go to state 16
    TOK_DEPLOY          shift, and go to state 17
    TOK_DONE            shift, and go to state 18
    TOK_DROP            shift, and go to state 19
    TOK_FLEET           shift, and go to state 20
    TOK_GALAXY          shift, and go to state 21
    TOK_HELP            shift, and go to state 22
    TOK_HEX             shift, and go to state 23
    TOK_LOAD            shift, and go to state 24
    TOK_MOVE            shift, and go to state 25
    TOK_NEXT            shift, and go to state 26
    TOK_ONLINE          shift, and go to state 27
    TOK_PICK            shift, and go to state 28
    TOK_QUIT            shift, and go to state 29
    TOK_REPAIR          shift, and go to state 30
    TOK_RESET           shift, and go to state 31
    TOK_RESUPPLY        shift, and go to state 32
    TOK_SAVE            shift, and go to state 33
    TOK_START_GAME      shift, and go to state 34
    TOK_STATS           shift, and go to state 35
    TOK_STATUS          shift, and go to state 36
    TOK_SYSTEM          shift, and go to state 37
    TOK_SURVEY          shift, and go to state 38

    command         go to state 39
    session_cmd     go to state 40
    info_cmd        go to state 41
    looking_cmd     go to state 42
    turn_cmd        go to state 43
    combat_cmd      go to state 44
    build_cmd       go to state 45
    deploy_cmd      go to state 46
    move_cmd        go to state 47
    pickdrop_cmd    go to state 48
    rep_cmd         go to state 49
    help_cmd        go to state 50
    help_composite  go to state 51
    help_command    go to state 52


State 2

    0 $accept: commands $end •

    $default  accept


State 3

   77 build_cmd: TOK_BUILD •
   78          | TOK_BUILD • TOK_NEW TOK_STRING TOK_STRING
   80          | TOK_BUILD • TOK_DRAFTS
   82          | TOK_BUILD • TOK_DRAFTS building_draft_ship
   84          | TOK_BUILD • TOK_SET_ATTR build_attr_spec
   86          | TOK_BUILD • TOK_COMMIT
   88          | TOK_BUILD • TOK_CANCEL

    TOK_CANCEL    shift, and go to state 53
    TOK_COMMIT    shift, and go to state 54
    TOK_DRAFTS    shift, and go to state 55
    TOK_NEW       shift, and go to state 56
    TOK_SET_ATTR  shift, and go to state 57

    $default  reduce using rule 77 (build_cmd)


State 4

   87 build_cmd: TOK_BUILD_COMMIT •

    $default  reduce using rule 87 (build_cmd)


State 5

   79 build_cmd: TOK_BUILD_NEW • TOK_STRING TOK_STRING

    TOK_STRING  shift, and go to state 58


State 6

   81 build_cmd: TOK_BUILD_DRAFTS •
   83          | TOK_BUILD_DRAFTS • building_draft_ship

    TOK_STRING  shift, and go to state 59

    $default  reduce using rule 81 (build_cmd)

    building_draft_ship  go to state 60


State 7

   89 build_cmd: TOK_BUILD_CANCEL •

    $default  reduce using rule 89 (build_cmd)


State 8

   85 build_cmd: TOK_BUILD_SET_ATTR • build_attr_spec

    TOK_PD_ASSIGN  shift, and go to state 61
    TOK_B_ASSIGN   shift, and go to state 62
    TOK_S_ASSIGN   shift, and go to state 63
    TOK_T_ASSIGN   shift, and go to state 64
    TOK_M_ASSIGN   shift, and go to state 65
    TOK_SR_ASSIGN  shift, and go to state 66

    build_attr_spec  go to state 67


State 9

   37 combat_cmd: TOK_COMBAT •
   38           | TOK_COMBAT • TOK_DRAFTS
   40           | TOK_COMBAT • TOK_COMMIT
   42           | TOK_COMBAT • TOK_CANCEL
   44           | TOK_COMBAT • TOK_ORDER combat_initiator_ship combat_tactic combat_target_ship combat_order_spec
   46           | TOK_COMBAT • TOK_APPLY combat_damaged_ship combat_application_spec

    TOK_APPLY   shift, and go to state 68
    TOK_CANCEL  shift, and go to state 69
    TOK_COMMIT  shift, and go to state 70
    TOK_DRAFTS  shift, and go to state 71
    TOK_ORDER   shift, and go to state 72

    $default  reduce using rule 37 (combat_cmd)


State 10

   39 combat_cmd: TOK_COMBAT_DRAFTS •

    $default  reduce using rule 39 (combat_cmd)


State 11

   45 combat_cmd: TOK_COMBAT_ORDER • combat_initiator_ship combat_tactic combat_target_ship combat_order_spec

    TOK_STRING  shift, and go to state 73

    combat_initiator_ship  go to state 74


State 12

   47 combat_cmd: TOK_COMBAT_APPLY • combat_damaged_ship combat_application_spec

    TOK_STRING  shift, and go to state 75

    combat_damaged_ship  go to state 76


State 13

   41 combat_cmd: TOK_COMBAT_COMMIT •

    $default  reduce using rule 41 (combat_cmd)


State 14

   43 combat_cmd: TOK_COMBAT_CANCEL •

    $default  reduce using rule 43 (combat_cmd)


State 15

   25 info_cmd: TOK_CRT •

    $default  reduce using rule 25 (info_cmd)


State 16

   21 session_cmd: TOK_DELETE •
   22            | TOK_DELETE • TOK_STRING

    TOK_STRING  shift, and go to state 77

    $default  reduce using rule 21 (session_cmd)


State 17

  104 deploy_cmd: TOK_DEPLOY •
  105           | TOK_DEPLOY • deployable_ship TOK_STRING

    TOK_STRING  shift, and go to state 78

    $default  reduce using rule 104 (deploy_cmd)

    deployable_ship  go to state 79


State 18

   36 turn_cmd: TOK_DONE •

    $default  reduce using rule 36 (turn_cmd)


State 19

  114 pickdrop_cmd: TOK_DROP • warpship_drop_source
  116             | TOK_DROP • target_systemship warpship_drop_source

    TOK_STRING  shift, and go to state 80

    target_systemship     go to state 81
    warpship_drop_source  go to state 82


State 20

   29 looking_cmd: TOK_FLEET •

    $default  reduce using rule 29 (looking_cmd)


State 21

   34 looking_cmd: TOK_GALAXY •

    $default  reduce using rule 34 (looking_cmd)


State 22

  125 help_cmd: TOK_HELP •
  127 help_composite: TOK_HELP • TOK_STRING
  129 help_command: TOK_HELP • TOK_SET_ATTR
  130             | TOK_HELP • TOK_APPLY
  131             | TOK_HELP • TOK_BEAM
  132             | TOK_HELP • TOK_BUILD
  133             | TOK_HELP • TOK_CANCEL
  134             | TOK_HELP • TOK_COMBAT
  135             | TOK_HELP • TOK_COMMIT
  136             | TOK_HELP • TOK_DEPLOY
  137             | TOK_HELP • TOK_DONE
  138             | TOK_HELP • TOK_DRAFTS
  139             | TOK_HELP • TOK_DROP
  140             | TOK_HELP • TOK_FLEET
  141             | TOK_HELP • TOK_GALAXY
  142             | TOK_HELP • TOK_HELP
  143             | TOK_HELP • TOK_HEX
  144             | TOK_HELP • TOK_LIST
  145             | TOK_HELP • TOK_MISSILE
  146             | TOK_HELP • TOK_MOVE
  147             | TOK_HELP • TOK_NEW
  148             | TOK_HELP • TOK_NEXT
  149             | TOK_HELP • TOK_NEXT_SHORT
  150             | TOK_HELP • TOK_ONLINE
  151             | TOK_HELP • TOK_ORDER
  152             | TOK_HELP • TOK_PICK
  153             | TOK_HELP • TOK_POWER_DRIVE
  154             | TOK_HELP • TOK_RESET
  155             | TOK_HELP • TOK_SCREEN
  156             | TOK_HELP • TOK_START_GAME
  157             | TOK_HELP • TOK_STATS
  158             | TOK_HELP • TOK_STATUS
  159             | TOK_HELP • TOK_SYSTEM
  160             | TOK_HELP • TOK_TUBE
  161             | TOK_HELP • TOK_UNKNOWN

    TOK_STRING       shift, and go to state 83
    TOK_APPLY        shift, and go to state 84
    TOK_BEAM         shift, and go to state 85
    TOK_BUILD        shift, and go to state 86
    TOK_CANCEL       shift, and go to state 87
    TOK_COMBAT       shift, and go to state 88
    TOK_COMMIT       shift, and go to state 89
    TOK_DEPLOY       shift, and go to state 90
    TOK_DONE         shift, and go to state 91
    TOK_DRAFTS       shift, and go to state 92
    TOK_DROP         shift, and go to state 93
    TOK_FLEET        shift, and go to state 94
    TOK_GALAXY       shift, and go to state 95
    TOK_HELP         shift, and go to state 96
    TOK_HEX          shift, and go to state 97
    TOK_LIST         shift, and go to state 98
    TOK_MISSILE      shift, and go to state 99
    TOK_MOVE         shift, and go to state 100
    TOK_NEW          shift, and go to state 101
    TOK_NEXT         shift, and go to state 102
    TOK_NEXT_SHORT   shift, and go to state 103
    TOK_ONLINE       shift, and go to state 104
    TOK_ORDER        shift, and go to state 105
    TOK_PICK         shift, and go to state 106
    TOK_POWER_DRIVE  shift, and go to state 107
    TOK_RESET        shift, and go to state 108
    TOK_SCREEN       shift, and go to state 109
    TOK_SET_ATTR     shift, and go to state 110
    TOK_START_GAME   shift, and go to state 111
    TOK_STATS        shift, and go to state 112
    TOK_STATUS       shift, and go to state 113
    TOK_SYSTEM       shift, and go to state 114
    TOK_TUBE         shift, and go to state 115
    TOK_UNKNOWN      shift, and go to state 116

    TOK_BUILD       [reduce using rule 125 (help_cmd)]
    TOK_COMBAT      [reduce using rule 125 (help_cmd)]
    TOK_DEPLOY      [reduce using rule 125 (help_cmd)]
    TOK_DONE        [reduce using rule 125 (help_cmd)]
    TOK_DROP        [reduce using rule 125 (help_cmd)]
    TOK_FLEET       [reduce using rule 125 (help_cmd)]
    TOK_GALAXY      [reduce using rule 125 (help_cmd)]
    TOK_HELP        [reduce using rule 125 (help_cmd)]
    TOK_HEX         [reduce using rule 125 (help_cmd)]
    TOK_MOVE        [reduce using rule 125 (help_cmd)]
    TOK_NEXT        [reduce using rule 125 (help_cmd)]
    TOK_ONLINE      [reduce using rule 125 (help_cmd)]
    TOK_PICK        [reduce using rule 125 (help_cmd)]
    TOK_RESET       [reduce using rule 125 (help_cmd)]
    TOK_START_GAME  [reduce using rule 125 (help_cmd)]
    TOK_STATS       [reduce using rule 125 (help_cmd)]
    TOK_STATUS      [reduce using rule 125 (help_cmd)]
    TOK_SYSTEM      [reduce using rule 125 (help_cmd)]
    $default        reduce using rule 125 (help_cmd)


State 23

   26 looking_cmd: TOK_HEX • TOK_STRING

    TOK_STRING  shift, and go to state 117


State 24

   19 session_cmd: TOK_LOAD •
   20            | TOK_LOAD • TOK_STRING

    TOK_STRING  shift, and go to state 118

    $default  reduce using rule 19 (session_cmd)


State 25

  109 move_cmd: TOK_MOVE •
  110         | TOK_MOVE • TOK_STRING TOK_STRING chain_move_location

    TOK_STRING  shift, and go to state 119

    $default  reduce using rule 109 (move_cmd)


State 26

   35 turn_cmd: TOK_NEXT •

    $default  reduce using rule 35 (turn_cmd)


State 27

   27 looking_cmd: TOK_ONLINE •

    $default  reduce using rule 27 (looking_cmd)


State 28

  113 pickdrop_cmd: TOK_PICK • TOK_STRING
  115             | TOK_PICK • target_systemship warpship_pick_destination

    TOK_STRING  shift, and go to state 120

    target_systemship  go to state 121


State 29

   23 session_cmd: TOK_QUIT •

    $default  reduce using rule 23 (session_cmd)


State 30

  117 rep_cmd: TOK_REPAIR •
  118        | TOK_REPAIR • TOK_STRING repair_attr_spec

    TOK_STRING  shift, and go to state 122

    $default  reduce using rule 117 (rep_cmd)


State 31

   17 session_cmd: TOK_RESET •

    $default  reduce using rule 17 (session_cmd)


State 32

  119 rep_cmd: TOK_RESUPPLY •
  120        | TOK_RESUPPLY • TOK_STRING TOK_INT

    TOK_STRING  shift, and go to state 123

    $default  reduce using rule 119 (rep_cmd)


State 33

   18 session_cmd: TOK_SAVE • TOK_STRING

    TOK_STRING  shift, and go to state 124


State 34

   14 session_cmd: TOK_START_GAME • TOK_LEARNING
   15            | TOK_START_GAME • TOK_BASIC
   16            | TOK_START_GAME • TOK_ADVANCED

    TOK_ADVANCED  shift, and go to state 125
    TOK_BASIC     shift, and go to state 126
    TOK_LEARNING  shift, and go to state 127


State 35

   28 looking_cmd: TOK_STATS •

    $default  reduce using rule 28 (looking_cmd)


State 36

   24 info_cmd: TOK_STATUS •

    $default  reduce using rule 24 (info_cmd)


State 37

   30 looking_cmd: TOK_SYSTEM • TOK_STRING
   31            | TOK_SYSTEM • TOK_STRING TOK_STRING

    TOK_STRING  shift, and go to state 128


State 38

   32 looking_cmd: TOK_SURVEY •
   33            | TOK_SURVEY • TOK_STRING

    TOK_STRING  shift, and go to state 129

    $default  reduce using rule 32 (looking_cmd)


State 39

    2 commands: commands command •

    $default  reduce using rule 2 (commands)


State 40

    4 command: session_cmd •

    $default  reduce using rule 4 (command)


State 41

    5 command: info_cmd •

    $default  reduce using rule 5 (command)


State 42

    6 command: looking_cmd •

    $default  reduce using rule 6 (command)


State 43

    7 command: turn_cmd •

    $default  reduce using rule 7 (command)


State 44

    8 command: combat_cmd •

    $default  reduce using rule 8 (command)


State 45

    9 command: build_cmd •

    $default  reduce using rule 9 (command)


State 46

   10 command: deploy_cmd •

    $default  reduce using rule 10 (command)


State 47

   11 command: move_cmd •

    $default  reduce using rule 11 (command)


State 48

   12 command: pickdrop_cmd •

    $default  reduce using rule 12 (command)


State 49

   13 command: rep_cmd •

    $default  reduce using rule 13 (command)


State 50

    3 command: help_cmd •

    $default  reduce using rule 3 (command)


State 51

  126 help_cmd: help_composite •

    $default  reduce using rule 126 (help_cmd)


State 52

  128 help_composite: help_command •

    $default  reduce using rule 128 (help_composite)


State 53

   88 build_cmd: TOK_BUILD TOK_CANCEL •

    $default  reduce using rule 88 (build_cmd)


State 54

   86 build_cmd: TOK_BUILD TOK_COMMIT •

    $default  reduce using rule 86 (build_cmd)


State 55

   80 build_cmd: TOK_BUILD TOK_DRAFTS •
   82          | TOK_BUILD TOK_DRAFTS • building_draft_ship

    TOK_STRING  shift, and go to state 59

    $default  reduce using rule 80 (build_cmd)

    building_draft_ship  go to state 130


State 56

   78 build_cmd: TOK_BUILD TOK_NEW • TOK_STRING TOK_STRING

    TOK_STRING  shift, and go to state 131


State 57

   84 build_cmd: TOK_BUILD TOK_SET_ATTR • build_attr_spec

    TOK_PD_ASSIGN  shift, and go to state 61
    TOK_B_ASSIGN   shift, and go to state 62
    TOK_S_ASSIGN   shift, and go to state 63
    TOK_T_ASSIGN   shift, and go to state 64
    TOK_M_ASSIGN   shift, and go to state 65
    TOK_SR_ASSIGN  shift, and go to state 66

    build_attr_spec  go to state 132


State 58

   79 build_cmd: TOK_BUILD_NEW TOK_STRING • TOK_STRING

    TOK_STRING  shift, and go to state 133


State 59

   48 building_draft_ship: TOK_STRING •

    $default  reduce using rule 48 (building_draft_ship)


State 60

   83 build_cmd: TOK_BUILD_DRAFTS building_draft_ship •

    $default  reduce using rule 83 (build_cmd)


State 61

   90 build_attr_spec: TOK_PD_ASSIGN • additional_build_attr_spec

    TOK_PD_ASSIGN  shift, and go to state 134
    TOK_B_ASSIGN   shift, and go to state 135
    TOK_S_ASSIGN   shift, and go to state 136
    TOK_T_ASSIGN   shift, and go to state 137
    TOK_M_ASSIGN   shift, and go to state 138
    TOK_SR_ASSIGN  shift, and go to state 139

    $default  reduce using rule 96 (additional_build_attr_spec)

    additional_build_attr_spec  go to state 140


State 62

   91 build_attr_spec: TOK_B_ASSIGN • additional_build_attr_spec

    TOK_PD_ASSIGN  shift, and go to state 134
    TOK_B_ASSIGN   shift, and go to state 135
    TOK_S_ASSIGN   shift, and go to state 136
    TOK_T_ASSIGN   shift, and go to state 137
    TOK_M_ASSIGN   shift, and go to state 138
    TOK_SR_ASSIGN  shift, and go to state 139

    $default  reduce using rule 96 (additional_build_attr_spec)

    additional_build_attr_spec  go to state 141


State 63

   92 build_attr_spec: TOK_S_ASSIGN • additional_build_attr_spec

    TOK_PD_ASSIGN  shift, and go to state 134
    TOK_B_ASSIGN   shift, and go to state 135
    TOK_S_ASSIGN   shift, and go to state 136
    TOK_T_ASSIGN   shift, and go to state 137
    TOK_M_ASSIGN   shift, and go to state 138
    TOK_SR_ASSIGN  shift, and go to state 139

    $default  reduce using rule 96 (additional_build_attr_spec)

    additional_build_attr_spec  go to state 142


State 64

   93 build_attr_spec: TOK_T_ASSIGN • additional_build_attr_spec

    TOK_PD_ASSIGN  shift, and go to state 134
    TOK_B_ASSIGN   shift, and go to state 135
    TOK_S_ASSIGN   shift, and go to state 136
    TOK_T_ASSIGN   shift, and go to state 137
    TOK_M_ASSIGN   shift, and go to state 138
    TOK_SR_ASSIGN  shift, and go to state 139

    $default  reduce using rule 96 (additional_build_attr_spec)

    additional_build_attr_spec  go to state 143


State 65

   94 build_attr_spec: TOK_M_ASSIGN • additional_build_attr_spec

    TOK_PD_ASSIGN  shift, and go to state 134
    TOK_B_ASSIGN   shift, and go to state 135
    TOK_S_ASSIGN   shift, and go to state 136
    TOK_T_ASSIGN   shift, and go to state 137
    TOK_M_ASSIGN   shift, and go to state 138
    TOK_SR_ASSIGN  shift, and go to state 139

    $default  reduce using rule 96 (additional_build_attr_spec)

    additional_build_attr_spec  go to state 144


State 66

   95 build_attr_spec: TOK_SR_ASSIGN • additional_build_attr_spec
